# plato_codesample

./: .gitignore  CMakeLists.txt  README.md
data/fab/: REMOVED_FILES
data/fab/plato_examples/: REMOVED_FILES  chess_set.ascii_proto  simple_glass.ascii_proto
fab/: CMakeLists.txt
fab/geometry/: CMakeLists.txt  algorithms2d.h  algorithms2d_test.cc  convert.h  intersect.h  mesh_renderer.h  transform_utils.h  tri_mesh.h  triangle_wrap.h
fab/geometry/template/: CMakeLists.txt  bounds.h  checks.h  checks_test.cc  curves.cc  curves.h  customizer.h  editor.h  interpreter.cc  interpreter.h  library.h  operations.cc  operations.h  operations.proto  params.h  proto_convert.h  registration.h  search_paths.h  shape.cc  shape.h  simple_main.cc  smart_customizer.h  template.cc  template.h  template.proto  template_params.h
fab/geometry/template/constraints/: constraints.h  constraints.proto  constraints_test.cc  expression.cc  expression.h  expression_test.cc  model.h  model_helper.h  model_test.cc
fab/geometry/template/operations/: combine_operations.cc  combine_operations.h  create_operations.h  modify_operations.cc  modify_operations.h  openscad_operations.h  openscad_operations_test.cc  special_operations.h
fab/geometry/template/precomp/: CMakeLists.txt  aggregate_hybrid_main.cc  aws_util.h  geometry_cache.h  hadoop_mapper_main.cc  key_util.h  lookup.cc  lookup.h  lookup_renderer.h  lookup_viewer.h  lookup_viewer_main.cc  optimize_cache_main.cc  precomp_main.cc  sampling_mapper.h  scripts.sh  stats.h  timing_stats_main.cc
fab/plato_web2/: CMakeLists.txt  customizer.html  customizer2.h  home.html  main.cc  mesh_encoder.h  server.h  wspp_config.h
fab/plato_web2/static/: InterleavedBufferGeometry.js  OrbitControls.js  WebGLRenderer.js  blue_ceramics.frag  gold.frag  red_plastic.frag  simple_red.frag  src.js  style.css
fab/qt_templatizer/: CMakeLists.txt  REMOVED_CODE  main.cpp  viewer_main_window_qt.h
util/: CMakeLists.txt  color_convert.h  proto_util.h  simple_uri.h  stl_util.h  ublas_util.h
